fixed some css issues on safari

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,6 +109,7 @@ so the menu is hidden to the user, but is still visible to searches/screen reade
 }
 .abs { /*abs attribute for my icons without changing those classes*/
 	position: absolute;
+	z-index: 10;
 }
 .rel { /*abs attribute for my icons without changing those classes*/
 	position: relative;
@@ -301,6 +302,7 @@ so the menu is hidden to the user, but is still visible to searches/screen reade
 	width: auto;
 }
 .el { /*element tag*/
+	z-index: 10;
 	text-align: center;
 	width: 100%;
 	height: 100%;
